--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.webonise.urbanfarmers"
-          xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest
+    package="com.webonise.urbanfarmers"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:name=".AppController"
@@ -19,6 +23,10 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity
+            android:name=".activities.SignUpActivity"
+            android:label="@string/sign_up"
+            android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
 </manifest>
