--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:name="com.webonise.gardenIt.AppController"
@@ -13,6 +14,11 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+
         <activity
             android:name="com.webonise.gardenIt.activities.SplashScreen"
             android:label="@string/app_name"
@@ -25,6 +31,10 @@
         </activity>
         <activity
             android:name="com.webonise.gardenIt.activities.SignUpActivity"
+            android:label="@string/sign_up"
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name="com.webonise.gardenIt.activities.CreateGardenActivity"
             android:label="@string/sign_up"
             android:theme="@style/AppTheme.NoActionBar"/>
     </application>
