--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,5 @@ dependencies {
     compile 'com.mcxiaoke.volley:library:1.0.17'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.google.android.gms:play-services:8.3.0'
+    compile 'de.hdodenhof:circleimageview:1.3.0'
 }
