Service Request and Create Issue Listing
Fixed crash

Modified code to have single class and layout for Issue and service listing

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,7 +57,7 @@
             android:screenOrientation="portrait"/>
 
         <activity
-            android:name="com.webonise.gardenIt.activities.IssuesListActivity"
+            android:name=".activities.IssueServiceListActivity"
             android:screenOrientation="portrait"/>
 
         <provider
