Refactoring and modifications
Changed class name from PlantDescriptionActivity to PlantDetailsActivity

Modified button name to Add Log instead of Service Request

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,7 +61,7 @@
             android:screenOrientation="portrait"/>
 
         <activity
-            android:name=".activities.PlantDescriptionActivity"
+            android:name=".activities.PlantDetailsActivity"
             android:screenOrientation="portrait"/>
 
         <activity
