--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,8 +62,10 @@ dependencies {
     compile 'com.mcxiaoke.volley:library:1.0.17'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.google.android.gms:play-services:8.4.0'
+    compile 'com.google.android.gms:play-services-gcm:8.4.0'
     compile 'de.hdodenhof:circleimageview:1.3.0'
     compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
         transitive = true;
     }
 }
+apply plugin: 'com.google.gms.google-services'
