--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -96,6 +96,7 @@
             android:name="io.fabric.ApiKey"
             android:value="6ff16e6cc941c2b24dddc0822e547dc13ed6c989" />
 
+        <!-- [START gcm_receiver] -->
         <receiver
             android:name="com.google.android.gms.gcm.GcmReceiver"
             android:exported="true"
@@ -103,9 +104,12 @@
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
                 <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
-                <category android:name="com.example.gcm" />
+                <category android:name="com.webonise.gardenIt" />
             </intent-filter>
         </receiver>
+        <!-- [END gcm_receiver] -->
+
+        <!-- [START gcm_listener] -->
         <service
             android:name="com.webonise.gardenIt.MyGcmListenerService"
             android:exported="false" >
@@ -113,12 +117,19 @@
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
             </intent-filter>
         </service>
+        <!-- [END gcm_listener] -->
+        <!-- [START instanceId_listener] -->
         <service
             android:name="com.webonise.gardenIt.MyInstanceIDListenerService"
             android:exported="false">
             <intent-filter>
-                <action android:name="com.google.android.gms.iid.InstanceID" />
+                <action android:name="com.google.android.gms.iid.InstanceID"/>
             </intent-filter>
+        </service>
+        <!-- [END instanceId_listener] -->
+        <service
+            android:name="com.webonise.gardenIt.RegistrationIntentService"
+            android:exported="false">
         </service>
     </application>
 
